name:                cfenv
version:             0.1.0.0
synopsis:            A library getting the environment when running on Cloud Foundry
description:         This is a port of go-cfenv for Golang. The purpose of this library is to assist you in writing Haskell apps that run on Cloud Foundry. It provides convenience functions and structures that map to Cloud Foundry environment variable primitives.
homepage:            https://github.com/tomphp/haskell-cfenv#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Oram
maintainer:          tom@codept.com
copyright:           2017, Tom Oram
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/tomphp/cfenv

library
  hs-source-dirs:      src
  exposed-modules:     CfEnv
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , text
    , bytestring
  default-language:    Haskell2010

test-suite cfenv-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cfenv
    , hspec == 2.*
  other-modules:
      CfEnvSpec
  default-language: Haskell2010
